fix: java 8 list